[package]
name = "mindia-core"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.6.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
actix-web = "4"
actix-rt = "2.2.0"
image = "0.24.7"
imageproc = "0.23.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
redis = "0.24.0"
sanitize-filename = "0.5.0"
actix-multipart = "0.6.1"
futures-util = "0.3.29"
futures = "0.3.29"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5.0"
aws-types = "1.0.3"
bytes = "1.5.0"
env_logger = "0.10.0"
kamadak-exif = "0.5.5"
mockall = "0.12.0"
cfg-if = "1.0.0"
mime = "0.3.17"
mime_guess = "2.0.4"
webp = "0.2"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.7.0"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["default"] }
toml = "0.8.8"
log = { version = "0.4.20", features = [] }
hex = "0.4.3"
rand = { version = "0.8.5", features = [] }
log4rs = "1.2.0"
tracing-subscriber = "0.3.18"
actix-web-opentelemetry = "0.16.0"
tonic = "0.10.2"
async-trait = { version = "0.1.76", features = [] }
tree_magic = "0.2.3"
