[package]
name = "mindia-core"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.6.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
redis = "0.24.0"
sanitize-filename = "0.5.0"
futures-util = "0.3.29"
futures = "0.3.29"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5.0"
aws-types = "1.0.3"
bytes = "1.5.0"
env_logger = "0.10.0"
kamadak-exif = "0.5.5"
mockall = "0.12.0"
cfg-if = "1.0.0"
mime = "0.3.17"
mime_guess = "2.0.4"
webp = "0.2"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8.8"
log = { version = "0.4.20", features = [] }
hex = "0.4.3"
rand = { version = "0.8.5", features = [] }
log4rs = "1.2.0"
tonic = "0.10.2"
async-trait = { version = "0.1.76", features = [] }
tree_magic = "0.2.3"
axum = { version = "0.7.4", features = ["tokio", "tracing", "multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
axum-extra = "0.9.2"
axum-macros = "0.4.1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
